# spbspu-labs-2023-tp-904-a

./: .config  .gitignore  .gitlab-ci.yml  README.md  input.txt  main.cpp
T0/: main.cpp
aksenov.egor/FT/: commandMap.cpp  commandMap.h  commands.cpp  commands.h  commandsImpl.cpp  commandsImpl.h  helpFunctions.cpp  helpFunctions.h  main.cpp  navigation.h
aksenov.egor/T0/: main.cpp
aksenov.egor/T2/: Comparator.cpp  Comparator.h  DataStruct.cpp  DataStruct.h  Iofmtguard.cpp  StreamGuard.cpp  StreamGuard.h  main.cpp
aksenov.egor/T3/: areaCommands.cpp  areaCommands.h  commandMap.cpp  commandMap.h  commands.cpp  commands.h  countCommands.cpp  countFunctions.h  helpFunctions.cpp  helpFunctions.h  main.cpp  maxCommands.cpp  maxCommands.h  minCommands.cpp  minCommands.h  polygon.cpp  polygon.h
aksenov.egor/common/: DataStruct.cpp  DataStruct.h  Iofmtguard.h
aristarkhov.rostislav/T0/: main.cpp
aristarkhov.rostislav/T2/: dataStruct.cpp  dataStruct.h  iostruct.cpp  iostruct.h  main.cpp  streamGuard.cpp
aristarkhov.rostislav/T3/: command.cpp  command.h  dictionaryCommand.cpp  dictionaryCommand.h  main.cpp  polygon.cpp  polygon.h
aristarkhov.rostislav/common/: iostruct.cpp  iostruct.h  streamGuard.h
avdeeva.natalya/FT/: Graph.cpp  Graph.h  Solution.cpp  Solution.h  main.cpp  outCommand.cpp  outCommand.h
kotova.yaroslava/: main.cpp
timofeev.maxim/: main.cpp
timofeev.maxim/T3/: CMakeLists.txt  commands.cpp  commands.h  dictionary.cpp  dictionary.h  helpFunctions.cpp  helpFunctions.h  main.cpp  polygon.cpp  polygon.h
zhdanov.andrey/: main.cpp
(+925 files in other folders)
